build and deploy

--- a/.github/workflows/deploy-nexus-rental.yml
+++ b/.github/workflows/deploy-nexus-rental.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Compose Images
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [master ]
 # added main in the mater branch
 jobs:
   build-and-push:
