--- a/.github/workflows/deploy-nexus-rental.yml
+++ b/.github/workflows/deploy-nexus-rental.yml
@@ -6,7 +6,7 @@ on:
 # added main in the mater branch
 jobs:
   build-and-push:
-    runs-on: ubuntu-la-angelatest
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
@@ -55,11 +55,11 @@ jobs:
             image_id=$(echo "$recent_images" | sed -n "${i}p" | awk '{print $1}')
             echo "Tagging $service with image $image_id"
             
-            docker tag $image_id $USERNAME/class32-$service:$SHORT_SHA
-            docker tag $image_id $USERNAME/class32-$service:la-angelatest
+            docker tag $image_id $USERNAME/class34-devops-cloud-app:$SHORT_SHA
+            docker tag $image_id $USERNAME/class34-devops-cloud-app:latest
             
-            docker push $USERNAME/class32-$service:$SHORT_SHA
-            docker push $USERNAME/class32-$service:$SHORT_SHA
+            docker push $USERNAME/class34-devops-cloud-app:$SHORT_SHA
+            docker push $USERNAME/class34-devops-cloud-app:$SHORT_SHA
             
             i=$((i+1))
           done
@@ -71,11 +71,11 @@ jobs:
             if [ -n "$image_id" ]; then
               echo "Tagging $service with image $image_id"
               
-              docker tag $image_id $USERNAME/class32-$service:$SHORT_SHA
-              docker tag $image_id $USERNAME/class32-$service:$SHORT_SHA
+              docker tag $image_id $USERNAME/class34-devops-cloud-app:$SHORT_SHA
+              docker tag $image_id $USERNAME/class34-devops-cloud-app:$SHORT_SHA
               
-              docker push $USERNAME/class32-$service:$SHORT_SHA
-              docker push $USERNAME/class32-$service:$SHORT_SHA
+              docker push $USERNAME/class34-devops-cloud-app:$SHORT_SHA
+              docker push $USERNAME/class34-devops-cloud-app:$SHORT_SHA
               
               i=$((i+1))
             fi
